--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -454,6 +454,33 @@
     "model.compile(loss='mean_squared_error', optimizer='adam')\n",
     "model.fit(x,y,verbose=2,epochs=100)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '0', '0', '0', '0', '0']\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def solution(P,Q):\n",
+    "\n",
+    "    for i in range(0,len(P)):\n",
+    "\n",
+    "        newlist.append(P[i])\n",
+    "\n",
+    "\n",
+    "    return \n",
+    "\n",
+    "print(Solution([a,b,c],[b,c,d]))"
+   ]
   }
  ],
  "metadata": {
@@ -472,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
