--- a/data_processing_2.ipynb
+++ b/data_processing_2.ipynb
@@ -2,28 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "float64    54\n",
-      "object      7\n",
-      "int32       3\n",
+      "float64    26\n",
+      "object      5\n",
       "Name: count, dtype: int64\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Index(['Flux_Band', 'Unc_Flux_Band', 'nuFnu_Band', 'Sqrt_TS_Band',\n",
-       "       'Flux_History', 'Unc_Flux_History', 'Sqrt_TS_History'],\n",
+       "Index(['Signif_Avg', 'Pivot_Energy', 'Flux1000', 'Energy_Flux100',\n",
+       "       'PL_Flux_Density', 'PL_Index', 'LP_Flux_Density', 'LP_Index', 'LP_beta',\n",
+       "       'LP_SigCurv', 'LP_EPeak', 'PLEC_Flux_Density', 'PLEC_IndexS',\n",
+       "       'PLEC_ExpfactorS', 'PLEC_Exp_Index', 'PLEC_SigCurv', 'PLEC_EPeak',\n",
+       "       'Npred', 'Flux_Band', 'nuFnu_Band', 'Sqrt_TS_Band', 'Variability_Index',\n",
+       "       'Frac_Variability', 'Signif_Peak', 'Flux_Peak', 'Time_Peak',\n",
+       "       'Peak_Interval', 'Flux_History', 'Sqrt_TS_History', 'ASSOC_PROB_BAY',\n",
+       "       'ASSOC_PROB_LR'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,59 +40,26 @@
     "\n",
     "table = ascii.read('hdu1.txt')\n",
     "fermi_lat = table.to_pandas()\n",
-    "fl = fermi_lat.drop(columns=['Source_Name','Extended_Source_Name','SpectrumType','ASSOC_4FGL','ASSOC_FGL','ASSOC_FHL','ASSOC_GAM1','ASSOC_GAM2','ASSOC_GAM3','TEVCAT_FLAG','ASSOC_TEV','CLASS1','CLASS2','ASSOC1','ASSOC2'])\n",
+    "fermi_lat.to_csv('hdu1.csv')\n",
+    "fl = fermi_lat.drop(columns=['ROI_num','RA_Counterpart','DEC_Counterpart','Conf_68_SemiMajor', 'Conf_68_SemiMinor', 'Conf_68_PosAng',\n",
+    "       'Conf_95_SemiMajor', 'Conf_95_SemiMinor', 'Conf_95_PosAng','RAJ2000', 'DEJ2000','DataRelease','GLON','GLAT','Source_Name',\n",
+    "       'Extended_Source_Name','SpectrumType','ASSOC_4FGL','ASSOC_FGL','ASSOC_FHL','ASSOC_GAM1','ASSOC_GAM2','ASSOC_GAM3','TEVCAT_FLAG',\n",
+    "       'ASSOC_TEV','CLASS1','CLASS2','ASSOC1','ASSOC2','Flags'])\n",
+    "\n",
+    "uncertainties = np.array([])\n",
+    "for x in fl.columns:\n",
+    "    if 'Unc' in x:\n",
+    "        uncertainties = np.append(uncertainties,x)\n",
+    "fl = fl.drop(columns=uncertainties)\n",
     "print(fl.dtypes.value_counts())\n",
-    "fl.select_dtypes(include=object).columns"
+    "fl.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 7195/7195 [00:00<00:00, 157807.58it/s]\n",
-      "100%|██████████| 7195/7195 [00:00<00:00, 114210.30it/s]\n",
-      "100%|██████████| 7195/7195 [00:00<00:00, 154591.79it/s]\n",
-      "100%|██████████| 7195/7195 [00:00<00:00, 96423.40it/s]\n",
-      "100%|██████████| 7195/7195 [00:00<00:00, 103551.51it/s]\n",
-      "100%|██████████| 7195/7195 [00:00<00:00, 76106.60it/s]\n",
-      "100%|██████████| 7195/7195 [00:00<00:00, 126760.04it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Index(['DataRelease', 'RAJ2000', 'DEJ2000', 'GLON', 'GLAT',\n",
-       "       'Conf_68_SemiMajor', 'Conf_68_SemiMinor', 'Conf_68_PosAng',\n",
-       "       'Conf_95_SemiMajor', 'Conf_95_SemiMinor', 'Conf_95_PosAng', 'ROI_num',\n",
-       "       'Signif_Avg', 'Pivot_Energy', 'Flux1000', 'Unc_Flux1000',\n",
-       "       'Energy_Flux100', 'Unc_Energy_Flux100', 'PL_Flux_Density',\n",
-       "       'Unc_PL_Flux_Density', 'PL_Index', 'Unc_PL_Index', 'LP_Flux_Density',\n",
-       "       'Unc_LP_Flux_Density', 'LP_Index', 'Unc_LP_Index', 'LP_beta',\n",
-       "       'Unc_LP_beta', 'LP_SigCurv', 'LP_EPeak', 'Unc_LP_EPeak',\n",
-       "       'PLEC_Flux_Density', 'Unc_PLEC_Flux_Density', 'PLEC_IndexS',\n",
-       "       'Unc_PLEC_IndexS', 'PLEC_ExpfactorS', 'Unc_PLEC_ExpfactorS',\n",
-       "       'PLEC_Exp_Index', 'Unc_PLEC_Exp_Index', 'PLEC_SigCurv', 'PLEC_EPeak',\n",
-       "       'Unc_PLEC_EPeak', 'Npred', 'Flux_Band', 'Unc_Flux_Band', 'nuFnu_Band',\n",
-       "       'Sqrt_TS_Band', 'Variability_Index', 'Frac_Variability',\n",
-       "       'Unc_Frac_Variability', 'Signif_Peak', 'Flux_Peak', 'Unc_Flux_Peak',\n",
-       "       'Time_Peak', 'Peak_Interval', 'Flux_History', 'Unc_Flux_History',\n",
-       "       'Sqrt_TS_History', 'ASSOC_PROB_BAY', 'ASSOC_PROB_LR', 'RA_Counterpart',\n",
-       "       'DEC_Counterpart', 'Unc_Counterpart', 'Flags', 'Flux_Band_1',\n",
-       "       'Unc_Flux_Band_1', 'nuFnu_Band_1', 'Sqrt_TS_Band_1', 'Flux_History_1',\n",
-       "       'Unc_Flux_History_1', 'Sqrt_TS_History_1'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "col0 = np.zeros(len(fl))\n",
     "col1 = np.zeros(len(fl))\n",
@@ -102,12 +74,15 @@
     "       'Flux_History', 'Unc_Flux_History', 'Sqrt_TS_History']\n",
     "\n",
     "for name in columnlist:    \n",
-    "    for i in tqdm(range(0,len(fl))):\n",
+    "    for i in range(0,len(fl)):\n",
     "        obj_data = fl[name][i]\n",
     "        obj_data = obj_data.replace('[','') \n",
     "        obj_data = obj_data.replace(']','') \n",
     "        obj_data = obj_data.replace('null','0')\n",
     "        float_data = [float(idx) for idx in obj_data.split(',')]\n",
+    "        for x in range(0,len(float_data)):\n",
+    "            if float_data[x] == 0:\n",
+    "                float_data[x] = np.nan\n",
     "        col0[i] = float_data[0]\n",
     "        col1[i] = float_data[1]\n",
     "        col2[i] = float_data[2]\n",
@@ -124,14 +99,23 @@
     "    fl[name+'_5'] = col5\n",
     "    fl[name+'_6'] = col6\n",
     "    fl[name+'_7'] = col7\n",
-    "    fl\n",
-    "fl.columns"
+    "\n",
+    "fl = fl.drop(columns=columnlist)\n",
+    "\n",
+    "fl.to_csv('ML_input.csv')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Glossary of Terms and Acronyms:\n",
+    "\n",
+    "PLEC = Power Law Exponential Cutoff\n",
+    "TS = Test Statistic: Used as threshold for inclusion of new sources.\n",
+    "ROI = Region of Interest??\n",
+    "Unc = Uncertainty"
+   ]
   }
  ],
  "metadata": {
