--- a/Data Processing/data_processing_2.ipynb
+++ b/Data Processing/data_processing_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,14 +37,18 @@
     "import numpy as np\n",
     "from tqdm import tqdm\n",
     "from astropy.io import ascii\n",
+    "import pandas as pd\n",
     "\n",
-    "table = ascii.read('hdu1.txt')\n",
+    "table = ascii.read('..\\Fermi-LAT Data\\hdu1.txt')\n",
     "fermi_lat = table.to_pandas()\n",
-    "fermi_lat.to_csv('hdu1.csv')\n",
+    "fermi_lat.to_csv('..\\Fermi-LAT Data\\hdu1.csv')\n",
     "fl = fermi_lat.drop(columns=['ROI_num','RA_Counterpart','DEC_Counterpart','Conf_68_SemiMajor', 'Conf_68_SemiMinor', 'Conf_68_PosAng',\n",
     "       'Conf_95_SemiMajor', 'Conf_95_SemiMinor', 'Conf_95_PosAng','RAJ2000', 'DEJ2000','DataRelease','GLON','GLAT','Source_Name',\n",
     "       'Extended_Source_Name','SpectrumType','ASSOC_4FGL','ASSOC_FGL','ASSOC_FHL','ASSOC_GAM1','ASSOC_GAM2','ASSOC_GAM3','TEVCAT_FLAG',\n",
     "       'ASSOC_TEV','CLASS1','CLASS2','ASSOC1','ASSOC2','Flags'])\n",
+    "\n",
+    "fl_classes = fermi_lat['CLASS1']\n",
+    "fl_classes.to_csv('fl_classes.csv')\n",
     "\n",
     "uncertainties = np.array([])\n",
     "for x in fl.columns:\n",
@@ -57,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,8 +74,8 @@
     "col6 = np.zeros(len(fl))\n",
     "col7 = np.zeros(len(fl))\n",
     "\n",
-    "columnlist = ['Flux_Band', 'Unc_Flux_Band', 'nuFnu_Band', 'Sqrt_TS_Band',\n",
-    "       'Flux_History', 'Unc_Flux_History', 'Sqrt_TS_History']\n",
+    "columnlist = ['Flux_Band', 'nuFnu_Band', 'Sqrt_TS_Band',\n",
+    "       'Flux_History','Sqrt_TS_History']\n",
     "\n",
     "for name in columnlist:    \n",
     "    for i in range(0,len(fl)):\n",
@@ -102,7 +106,84 @@
     "\n",
     "fl = fl.drop(columns=columnlist)\n",
     "\n",
-    "fl.to_csv('ML_input.csv')"
+    "fl.to_csv('..\\Fermi-LAT Data\\FL_numericalonly_nopositional.csv')\n",
+    "\n",
+    "cl = pd.read_csv('..\\\\Fermi-LAT Data\\\\fl_classes_numerical.csv',index_col=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_list = fl.columns\n",
+    "nan_count = np.zeros(len(column_list))\n",
+    "\n",
+    "\n",
+    "fl = fl.replace(np.inf,np.nan)\n",
+    "fl = fl.replace(-np.inf,np.nan)\n",
+    "\n",
+    "'''\n",
+    "REPLACING ALL INFINITE VALUES WITH NaN BECAUSE SCIKIT LEARN CANNOT READ THEM\n",
+    "'''\n",
+    "\n",
+    "for i in range(0,len(column_list)):\n",
+    "    n_nans = (1 - (fl[column_list[i]].count()/len(fl[column_list[i]]))) * 100\n",
+    "    #print('nans in ' + x + ': ' + str(n_nans))\n",
+    "    nan_count[i] = n_nans\n",
+    "\n",
+    "\n",
+    "nan_data = np.stack((column_list,nan_count),axis=1)\n",
+    "nc = pd.DataFrame(nan_data,columns=['Parameter','Percentage NaNs'])\n",
+    "nc = nc.drop([0])\n",
+    "#nc.to_csv('NaN_percentage_by_column.csv')\n",
+    "\n",
+    "drop_cols = np.array([])\n",
+    "\n",
+    "for i in range(1,len(nc)):\n",
+    "    if nc['Parameter'][i] == 'CLASS1':\n",
+    "        pass\n",
+    "    elif nc['Percentage NaNs'][i] >= 20 :\n",
+    "        nc_sub20 = nc.drop([i])\n",
+    "        drop_cols = np.append(drop_cols,nc['Parameter'][i])\n",
+    "\n",
+    "#nc_sub20.to_csv('NaN_percentage_by_column_sub20.csv')\n",
+    "\n",
+    "fl_sub20 = fl.drop(columns=drop_cols)\n",
+    "\n",
+    "fl = fl_sub20.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ioanp\\AppData\\Local\\Temp\\ipykernel_28436\\2005707796.py:9: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  fl_cl = fl_cl[~mask2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fl_cl = pd.merge(fl,cl,left_index=True,right_index=True)\n",
+    "\n",
+    "fl_cl.dropna()\n",
+    "\n",
+    "mask1 = fl_cl['CLASS1'] == 4\n",
+    "mask2 = fl_cl['CLASS1'] == 0\n",
+    "\n",
+    "fl_cl = fl_cl[~mask1]\n",
+    "fl_cl = fl_cl[~mask2]\n",
+    "\n",
+    "\n",
+    "fl_cl.head()\n",
+    "\n",
+    "fl_cl.to_csv('..\\\\Fermi-LAT Data\\\\fl_numericalonly_nopositional_withclasses.csv')"
    ]
   },
   {
@@ -116,6 +197,13 @@
     "ROI = Region of Interest??\n",
     "Unc = Uncertainty"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
