--- a/Data Processing/classes.ipynb
+++ b/Data Processing/classes.ipynb
@@ -2,22 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nan 'bcu' 'bll' 'fsrq' 'unk' 'spp' 'PSR' 'sey' 'rdg' 'agn' 'FSRQ' 'MSP'\n",
+      " 'glc' 'snr' 'gal' 'sbg' 'BLL' 'GAL' 'sfr' 'PWN' 'bin' 'SNR' 'HMB' 'RDG'\n",
+      " 'nlsy1' 'msp' 'lmb' 'NOV' 'css' 'LMB' 'AGN' 'pwn' 'BCU' 'hmb' 'ssrq'\n",
+      " 'NLSY1' 'psr' 'SFR' 'BIN' 'SPP' 'GC']\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np \n",
     "import pandas as pd\n",
     "\n",
     "cl = pd.read_csv('..\\\\Fermi-LAT Data\\\\fl_classes.csv',index_col=0)\n",
     "\n",
+    "print(cl['CLASS1'].unique())\n",
     "\n",
     "cl = cl.replace('bcu',0)\n",
     "cl = cl.replace('bll',1)\n",
     "cl = cl.replace('fsrq',2)\n",
+    "cl = cl.replace('rdg',3)\n",
     "cl = cl.replace('BLL',1)\n",
     "cl = cl.replace('FSRQ',2)\n",
     "cl = cl.replace('BCU',0)\n",
+    "cl = cl.replace('RDG',3)\n",
+    "\n",
     "\n",
     "for i in range(0,len(cl['CLASS1'])):\n",
     "    if cl['CLASS1'][i] == 0:\n",
@@ -25,6 +40,8 @@
     "    elif cl['CLASS1'][i] == 1 :\n",
     "        pass\n",
     "    elif cl['CLASS1'][i] == 2:\n",
+    "        pass\n",
+    "    elif cl['CLASS1'][i] == 3:\n",
     "        pass\n",
     "    else:\n",
     "        cl['CLASS1'][i] = 4\n",
