--- a/Data Processing/classes.ipynb
+++ b/Data Processing/classes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,9 @@
     "\n",
     "'''\n",
     "\n",
-    "In this DataFrame all unknown BCUs are assigned 0. All BLLs are assigned 1 and all FSRQs are assigned 2.\n",
+    "In this DataFrame all unknown BCUs are assigned 0. \n",
+    "All BLLs are assigned 1 and all FSRQs are assigned 2.\n",
+    "Radio Galaxies = 3 and Other = 4\n",
     "\n",
     "'''\n",
     "\n",
