--- a/Data Processing/data_processing_2.ipynb
+++ b/Data Processing/data_processing_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,22 +157,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ioanp\\AppData\\Local\\Temp\\ipykernel_28436\\2005707796.py:9: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\ioanp\\AppData\\Local\\Temp\\ipykernel_6392\\1425612611.py:12: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  fl_cl = fl_cl[~mask2]\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Signif_Avg</th>\n",
+       "      <th>Pivot_Energy</th>\n",
+       "      <th>Flux1000</th>\n",
+       "      <th>Energy_Flux100</th>\n",
+       "      <th>PL_Flux_Density</th>\n",
+       "      <th>PL_Index</th>\n",
+       "      <th>LP_Flux_Density</th>\n",
+       "      <th>LP_Index</th>\n",
+       "      <th>LP_beta</th>\n",
+       "      <th>LP_SigCurv</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Flux_History_7</th>\n",
+       "      <th>Sqrt_TS_History_0</th>\n",
+       "      <th>Sqrt_TS_History_1</th>\n",
+       "      <th>Sqrt_TS_History_2</th>\n",
+       "      <th>Sqrt_TS_History_3</th>\n",
+       "      <th>Sqrt_TS_History_4</th>\n",
+       "      <th>Sqrt_TS_History_5</th>\n",
+       "      <th>Sqrt_TS_History_6</th>\n",
+       "      <th>Sqrt_TS_History_7</th>\n",
+       "      <th>CLASS1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>24.497220</td>\n",
+       "      <td>2065.1467</td>\n",
+       "      <td>7.024454e-10</td>\n",
+       "      <td>7.807578e-12</td>\n",
+       "      <td>1.690367e-13</td>\n",
+       "      <td>2.081634</td>\n",
+       "      <td>1.778363e-13</td>\n",
+       "      <td>2.052470</td>\n",
+       "      <td>0.037899</td>\n",
+       "      <td>1.283201</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.039027e-08</td>\n",
+       "      <td>7.926063</td>\n",
+       "      <td>2.934573</td>\n",
+       "      <td>5.890346</td>\n",
+       "      <td>10.227452</td>\n",
+       "      <td>7.208447</td>\n",
+       "      <td>5.825856</td>\n",
+       "      <td>6.605715</td>\n",
+       "      <td>6.771310</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>16.672523</td>\n",
+       "      <td>3402.8190</td>\n",
+       "      <td>2.461732e-10</td>\n",
+       "      <td>2.441939e-12</td>\n",
+       "      <td>2.144947e-14</td>\n",
+       "      <td>1.817964</td>\n",
+       "      <td>2.620644e-14</td>\n",
+       "      <td>1.599259</td>\n",
+       "      <td>0.160069</td>\n",
+       "      <td>3.092949</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.305279e-10</td>\n",
+       "      <td>4.456632</td>\n",
+       "      <td>5.560203</td>\n",
+       "      <td>3.472792</td>\n",
+       "      <td>2.216244</td>\n",
+       "      <td>5.653224</td>\n",
+       "      <td>6.638917</td>\n",
+       "      <td>3.212988</td>\n",
+       "      <td>2.189012</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>13.404971</td>\n",
+       "      <td>1446.4923</td>\n",
+       "      <td>3.228662e-10</td>\n",
+       "      <td>2.490286e-12</td>\n",
+       "      <td>1.497786e-13</td>\n",
+       "      <td>2.160730</td>\n",
+       "      <td>1.797058e-13</td>\n",
+       "      <td>2.042221</td>\n",
+       "      <td>0.153955</td>\n",
+       "      <td>2.639367</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.286408e-09</td>\n",
+       "      <td>5.388860</td>\n",
+       "      <td>3.738754</td>\n",
+       "      <td>5.641364</td>\n",
+       "      <td>1.812777</td>\n",
+       "      <td>3.114181</td>\n",
+       "      <td>4.748802</td>\n",
+       "      <td>3.766370</td>\n",
+       "      <td>2.456795</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>6.878327</td>\n",
+       "      <td>2795.2131</td>\n",
+       "      <td>1.670210e-10</td>\n",
+       "      <td>1.111306e-12</td>\n",
+       "      <td>1.933776e-14</td>\n",
+       "      <td>2.053279</td>\n",
+       "      <td>2.674631e-14</td>\n",
+       "      <td>1.782085</td>\n",
+       "      <td>0.303313</td>\n",
+       "      <td>2.515318</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.298051e-10</td>\n",
+       "      <td>4.283851</td>\n",
+       "      <td>2.647704</td>\n",
+       "      <td>1.020642</td>\n",
+       "      <td>4.712511</td>\n",
+       "      <td>0.972565</td>\n",
+       "      <td>3.475557</td>\n",
+       "      <td>0.097890</td>\n",
+       "      <td>0.814137</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>23.338678</td>\n",
+       "      <td>691.1044</td>\n",
+       "      <td>4.611794e-10</td>\n",
+       "      <td>5.242116e-12</td>\n",
+       "      <td>1.507037e-12</td>\n",
+       "      <td>2.404988</td>\n",
+       "      <td>1.628805e-12</td>\n",
+       "      <td>2.322214</td>\n",
+       "      <td>0.079294</td>\n",
+       "      <td>2.371903</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.127961e-09</td>\n",
+       "      <td>11.698710</td>\n",
+       "      <td>15.035206</td>\n",
+       "      <td>7.581436</td>\n",
+       "      <td>3.281046</td>\n",
+       "      <td>3.570668</td>\n",
+       "      <td>4.137671</td>\n",
+       "      <td>2.708634</td>\n",
+       "      <td>2.464151</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 58 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Signif_Avg  Pivot_Energy      Flux1000  Energy_Flux100  PL_Flux_Density  \\\n",
+       "4    24.497220     2065.1467  7.024454e-10    7.807578e-12     1.690367e-13   \n",
+       "10   16.672523     3402.8190  2.461732e-10    2.441939e-12     2.144947e-14   \n",
+       "25   13.404971     1446.4923  3.228662e-10    2.490286e-12     1.497786e-13   \n",
+       "27    6.878327     2795.2131  1.670210e-10    1.111306e-12     1.933776e-14   \n",
+       "29   23.338678      691.1044  4.611794e-10    5.242116e-12     1.507037e-12   \n",
+       "\n",
+       "    PL_Index  LP_Flux_Density  LP_Index   LP_beta  LP_SigCurv  ...  \\\n",
+       "4   2.081634     1.778363e-13  2.052470  0.037899    1.283201  ...   \n",
+       "10  1.817964     2.620644e-14  1.599259  0.160069    3.092949  ...   \n",
+       "25  2.160730     1.797058e-13  2.042221  0.153955    2.639367  ...   \n",
+       "27  2.053279     2.674631e-14  1.782085  0.303313    2.515318  ...   \n",
+       "29  2.404988     1.628805e-12  2.322214  0.079294    2.371903  ...   \n",
+       "\n",
+       "    Flux_History_7  Sqrt_TS_History_0  Sqrt_TS_History_1  Sqrt_TS_History_2  \\\n",
+       "4     1.039027e-08           7.926063           2.934573           5.890346   \n",
+       "10    2.305279e-10           4.456632           5.560203           3.472792   \n",
+       "25    2.286408e-09           5.388860           3.738754           5.641364   \n",
+       "27    2.298051e-10           4.283851           2.647704           1.020642   \n",
+       "29    3.127961e-09          11.698710          15.035206           7.581436   \n",
+       "\n",
+       "    Sqrt_TS_History_3  Sqrt_TS_History_4  Sqrt_TS_History_5  \\\n",
+       "4           10.227452           7.208447           5.825856   \n",
+       "10           2.216244           5.653224           6.638917   \n",
+       "25           1.812777           3.114181           4.748802   \n",
+       "27           4.712511           0.972565           3.475557   \n",
+       "29           3.281046           3.570668           4.137671   \n",
+       "\n",
+       "    Sqrt_TS_History_6  Sqrt_TS_History_7  CLASS1  \n",
+       "4            6.605715           6.771310       1  \n",
+       "10           3.212988           2.189012       1  \n",
+       "25           3.766370           2.456795       1  \n",
+       "27           0.097890           0.814137       1  \n",
+       "29           2.708634           2.464151       2  \n",
+       "\n",
+       "[5 rows x 58 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "fl_cl = pd.merge(fl,cl,left_index=True,right_index=True)\n",
     "\n",
     "fl_cl.dropna()\n",
+    "\n",
+    "fl_cl.to_csv('..\\\\Fermi-LAT Data\\\\fl_numericalonly_nopositional_withclasses.csv')\n",
+    "\n",
     "\n",
     "mask1 = fl_cl['CLASS1'] == 4\n",
     "mask2 = fl_cl['CLASS1'] == 0\n",
@@ -181,9 +397,7 @@
     "fl_cl = fl_cl[~mask2]\n",
     "\n",
     "\n",
-    "fl_cl.head()\n",
-    "\n",
-    "fl_cl.to_csv('..\\\\Fermi-LAT Data\\\\fl_numericalonly_nopositional_withclasses.csv')"
+    "fl_cl.head()\n"
    ]
   },
   {
