--- a/Data Processing/data_processing_2.ipynb
+++ b/Data Processing/data_processing_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,6 +46,16 @@
     "       'Conf_95_SemiMajor', 'Conf_95_SemiMinor', 'Conf_95_PosAng','RAJ2000', 'DEJ2000','DataRelease','GLON','GLAT','Source_Name',\n",
     "       'Extended_Source_Name','SpectrumType','ASSOC_4FGL','ASSOC_FGL','ASSOC_FHL','ASSOC_GAM1','ASSOC_GAM2','ASSOC_GAM3','TEVCAT_FLAG',\n",
     "       'ASSOC_TEV','CLASS1','CLASS2','ASSOC1','ASSOC2','Flags'])\n",
+    "\n",
+    "'''\n",
+    "The above columns are dropped because they are either positional data or non-numerical data.\n",
+    "\n",
+    "Uncertainty data is also dropped below.\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "#fl = fermi_lat.drop(columns=[])\n",
     "\n",
     "fl_classes = fermi_lat['CLASS1']\n",
     "fl_classes.to_csv('fl_classes.csv')\n",
