--- a/Data Processing/data_processing.ipynb
+++ b/Data Processing/data_processing.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<astropy.io.fits.hdu.table.BinTableHDU object at 0x000001D31F97BD50>\n",
+      "<astropy.io.fits.hdu.table.BinTableHDU object at 0x00000167D8718190>\n",
       "   Source_Name     DataRelease RAJ2000  ... Unc_Counterpart Flags\n",
       "                                 deg    ...       deg            \n",
       "------------------ ----------- -------- ... --------------- -----\n",
@@ -46,10 +46,10 @@
     "\n",
     "#fits_image_filename = fits.util.get_testdata_filepath('gll_psc_v32.fit')\n",
     "\n",
-    "hdul = fits.open('gll_psc_v32.fit')\n",
+    "hdul = fits.open('..\\\\Fermi-LAT Data\\\\gll_psc_v32.fit')\n",
     "print(hdul[1])\n",
     "\n",
-    "table = Table.read('gll_psc_v32.fit',hdu=1)\n",
+    "table = Table.read('..\\\\Fermi-LAT Data\\\\gll_psc_v32.fit',hdu=1)\n",
     "ascii.write(table, 'hdu1.ecsv', overwrite=True, format = 'ecsv')\n",
     "#df = table.to_pandas()\n",
     "#df.to_csv('gll.csv')\n",
@@ -65,34 +65,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['Source_Name', 'DataRelease', 'RAJ2000', 'DEJ2000', 'GLON', 'GLAT',\n",
-      "       'Conf_68_SemiMajor', 'Conf_68_SemiMinor', 'Conf_68_PosAng',\n",
-      "       'Conf_95_SemiMajor', 'Conf_95_SemiMinor', 'Conf_95_PosAng', 'ROI_num',\n",
-      "       'Extended_Source_Name', 'Signif_Avg', 'Pivot_Energy', 'Flux1000',\n",
-      "       'Unc_Flux1000', 'Energy_Flux100', 'Unc_Energy_Flux100', 'SpectrumType',\n",
-      "       'PL_Flux_Density', 'Unc_PL_Flux_Density', 'PL_Index', 'Unc_PL_Index',\n",
-      "       'LP_Flux_Density', 'Unc_LP_Flux_Density', 'LP_Index', 'Unc_LP_Index',\n",
-      "       'LP_beta', 'Unc_LP_beta', 'LP_SigCurv', 'LP_EPeak', 'Unc_LP_EPeak',\n",
-      "       'PLEC_Flux_Density', 'Unc_PLEC_Flux_Density', 'PLEC_IndexS',\n",
-      "       'Unc_PLEC_IndexS', 'PLEC_ExpfactorS', 'Unc_PLEC_ExpfactorS',\n",
-      "       'PLEC_Exp_Index', 'Unc_PLEC_Exp_Index', 'PLEC_SigCurv', 'PLEC_EPeak',\n",
-      "       'Unc_PLEC_EPeak', 'Npred', 'Flux_Band', 'Unc_Flux_Band', 'nuFnu_Band',\n",
-      "       'Sqrt_TS_Band', 'Variability_Index', 'Frac_Variability',\n",
-      "       'Unc_Frac_Variability', 'Signif_Peak', 'Flux_Peak', 'Unc_Flux_Peak',\n",
-      "       'Time_Peak', 'Peak_Interval', 'Flux_History', 'Unc_Flux_History',\n",
-      "       'Sqrt_TS_History', 'ASSOC_4FGL', 'ASSOC_FGL', 'ASSOC_FHL', 'ASSOC_GAM1',\n",
-      "       'ASSOC_GAM2', 'ASSOC_GAM3', 'TEVCAT_FLAG', 'ASSOC_TEV', 'CLASS1',\n",
-      "       'CLASS2', 'ASSOC1', 'ASSOC2', 'ASSOC_PROB_BAY', 'ASSOC_PROB_LR',\n",
-      "       'RA_Counterpart', 'DEC_Counterpart', 'Unc_Counterpart', 'Flags'],\n",
+      "Index(['Source_Name', 'Extended_Source_Name', 'SpectrumType', 'Flux_Band',\n",
+      "       'Unc_Flux_Band', 'nuFnu_Band', 'Sqrt_TS_Band', 'Flux_History',\n",
+      "       'Unc_Flux_History', 'Sqrt_TS_History', 'ASSOC_4FGL', 'ASSOC_FGL',\n",
+      "       'ASSOC_FHL', 'ASSOC_GAM1', 'ASSOC_GAM2', 'ASSOC_GAM3', 'TEVCAT_FLAG',\n",
+      "       'ASSOC_TEV', 'CLASS1', 'CLASS2', 'ASSOC1', 'ASSOC2'],\n",
       "      dtype='object')\n"
      ]
     }
    ],
    "source": [
-    "table = ascii.read('hdu1.txt')\n",
+    "table = ascii.read('..\\\\Fermi-LAT Data\\\\hdu1.txt')\n",
     "\n",
     "fermi_lat = table.to_pandas()\n",
-    "print(fermi_lat.columns)"
+    "print(fermi_lat.select_dtypes(include='object').columns)"
    ]
   },
   {
@@ -229,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
