--- a/Data Processing/data_processing_4-postwrapper.ipynb
+++ b/Data Processing/data_processing_4-postwrapper.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Signif_Avg', 'PL_Flux_Density', 'LP_SigCurv', 'PLEC_IndexS', 'PLEC_SigCurv', 'Npred', 'Variability_Index', 'ASSOC_PROB_BAY', 'Flux_Band_1', 'Flux_Band_5']\n"
+      "['Signif_Avg', 'PL_Flux_Density', 'LP_SigCurv', 'PLEC_IndexS', 'PLEC_SigCurv', 'Npred', 'Variability_Index', 'Frac_Variability', 'Flux_Band_0', 'Flux_Band_4']\n"
      ]
     }
    ],
@@ -17,7 +17,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "feature_nums = [1,5,10,13,16,17,18,20,22,26]\n",
+    "feature_nums = [1,5,10,13,16,17,18,19,21,25]\n",
     "\n",
     "data = pd.read_csv('..\\\\Fermi-LAT Data\\\\fl_varranked_rm0.csv')\n",
     "\n",
