--- a/ML/Pipeline.ipynb
+++ b/ML/Pipeline.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Bagged Neural Network accuracy is 91.32530120481928\n",
-      "The Bagged Neural Network Confusion Matrix is:\n",
+      "check1\n",
+      "[0. 0. 0. ... 0. 0. 0.]\n",
+      "The Neural Network accuracy is 91.56626506024097\n",
+      "The Neural Network Confusion Matrix is:\n",
       "[[253  14]\n",
-      " [ 22 126]]\n"
+      " [ 21 127]]\n"
      ]
     }
    ],
@@ -23,18 +25,24 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import BaggingClassifier\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score\n",
+    "import wandb\n",
+    "from wandb.sklearn import plot_precision_recall, plot_feature_importances\n",
+    "from wandb.sklearn import plot_class_proportions, plot_learning_curve, plot_roc\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from IMPJ import DataProcessor\n",
     "\n",
     "data = pd.read_csv('..\\\\Fermi-LAT Data\\\\fl_numericalonly_nopositional_withclasses.csv', index_col=0)\n",
     "\n",
+    "test_size = 0.3\n",
+    "\n",
     "dp = DataProcessor()\n",
     "X,Y = dp.choose_2_vars('CLASS1',data,1,2)\n",
-    "x_train, x_test, y_train, y_test = train_test_split(X, Y, test_size=0.30,random_state=4) \n",
+    "print(Y)\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X, Y, test_size=test_size,random_state=4) \n",
     "\n",
-    "NN = MLPClassifier(activation='relu', alpha= 0.0001, hidden_layer_sizes=(13, 2), learning_rate='constant', solver='sgd', random_state=1, max_iter=10000)\n",
-    "BNN = BaggingClassifier(estimator=NN,n_estimators=100,bootstrap=True)\n",
+    "NN = MLPClassifier(activation='relu', alpha= 0.0001, hidden_layer_sizes=(30,20,10), learning_rate='constant', solver='sgd', random_state=1, max_iter=10000)\n",
+    "BNN = BaggingClassifier(estimator=NN,n_estimators=10,bootstrap=True)\n",
     "\n",
     "# Define the pipeline\n",
     "pipeline = Pipeline([\n",
@@ -51,14 +59,121 @@
     "\n",
     "accuracy = accuracy_score(y_test, y_pred)*100\n",
     "confusion = confusion_matrix(y_test, y_pred)\n",
-    "print('The Bagged Neural Network accuracy is ' + str(accuracy))\n",
-    "print('The Bagged Neural Network Confusion Matrix is:')\n",
+    "print('The Neural Network accuracy is ' + str(accuracy))\n",
+    "print('The Neural Network Confusion Matrix is:')\n",
     "print(confusion)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.16.1"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>c:\\Users\\ioanp\\Documents\\Final Year Project\\initial_coding\\ML\\wandb\\run-20231210_144035-ght2ip7i</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/ioanpeakejones/final-year-project/runs/ght2ip7i' target=\"_blank\">earnest-flower-8</a></strong> to <a href='https://wandb.ai/ioanpeakejones/final-year-project' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/ioanpeakejones/final-year-project' target=\"_blank\">https://wandb.ai/ioanpeakejones/final-year-project</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/ioanpeakejones/final-year-project/runs/ght2ip7i' target=\"_blank\">https://wandb.ai/ioanpeakejones/final-year-project/runs/ght2ip7i</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run <strong style=\"color:#cdcd00\">earnest-flower-8</strong> at: <a href='https://wandb.ai/ioanpeakejones/final-year-project/runs/ght2ip7i' target=\"_blank\">https://wandb.ai/ioanpeakejones/final-year-project/runs/ght2ip7i</a><br/>Synced 4 W&B file(s), 4 media file(s), 4 artifact file(s) and 0 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>.\\wandb\\run-20231210_144035-ght2ip7i\\logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "BNN_params = BNN.get_params\n",
+    "wandb.init(project='final-year-project', config=BNN_params)\n",
+    "wandb.config.update({\"test_size\" : test_size,\n",
+    "                    \"train_len\" : len(x_train),\n",
+    "                    \"test_len\" : len(x_test)})\n",
+    "\n",
+    "plot_class_proportions(y_train, y_test, labels)\n",
+    "plot_learning_curve(BNN, x_train, y_train)\n",
+    "plot_roc(y_test, y_proba, labels)\n",
+    "plot_precision_recall(y_test, y_proba, labels)\n",
+    "#plot_feature_importances(model)\n",
+    "\n",
+    "# [optional] finish the wandb run, necessary in notebooks\n",
+    "wandb.finish()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -100,6 +215,13 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -118,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
